--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=test
+spring.profiles.active=dev
 
 default.sender=lucasbezerra06@gmail.com
 default.recipient=lucasbezerra06@gmail.com
